<resources>
    <string name="app_name">SaveMoney</string>
    <string name="please_allow_us_to_access_your_camera_and_take_picture">Please allow us to access your camera and take picture.</string>
    <string name="message_denied_camera_permission">You need to grant camera permission to use this feature!</string>
    <string name="this_action_may_take_several_seconds">This action may take several seconds</string>
    <string name="language">Language</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="ob_t_1">Manage Work Schedule!</string>
    <string name="ob_t_2">Spend management!</string>
    <string name="ob_t_3">Time is Gold and Silver!</string>
    <string name="ob_d_1">Work with Rules</string>
    <string name="ob_d_2">Helps you manage your spending well!</string>
    <string name="ob_d_3">Manage it well to have a quality life!</string>
    <string name="get_started">Get Started</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="save_money">Save Money</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="enter_your_details_below">Enter your details below</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or_login_with">Or login with</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="get_started_freee">Get Started Freee.</string>
    <string name="free_forever_no_credit_card_needed">Free forever. No credit card needed.</string>
    <string name="sign_up">Sign up</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="your_full_name">Your full name</string>
    <string name="this_field_cannot_be_left_blank">This field cannot be left blank!</string>
    <string name="invalid_email">Invalid email!</string>
    <string name="password_minimum_eight_characters">Password minimum 8 characters!</string>
    <string name="email_already_active">Email already active!</string>
    <string name="register_success">Register success!</string>
    <string name="account_incorrect">Account incorrect!</string>
    <string name="home">Home</string>
    <string name="let_s_manage_your_account">Let\'s Manage your Account</string>
    <string name="hello">Hello</string>
    <string name="total_balance">Total Balance</string>
    <string name="income">Income</string>
    <string name="real_income">Real Income</string>
    <string name="actual_cost">Actual Cost</string>
    <string name="expected_income">Expected income</string>
    <string name="estimated_cost">Estimated cost</string>
    <string name="activities">Activities</string>
    <string name="add_new_record">Add new record</string>
    <string name="service">Service</string>
    <string name="add_more">Add more</string>
    <string name="note_title">Note Title</string>
    <string name="information_cannot_be_left_blank">Information cannot be left blank!</string>
    <string name="revenue">Revenue</string>
    <string name="_0_vnd">0 VND</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="this_is_sample_item">This is sample item</string>
    <string name="update_categories">Update Categories</string>
    <string name="category_name">Category name</string>
    <string name="update">Update</string>
    <string name="add_categories">Add categories</string>
    <string name="category_not_selected">No categories have been selected yet!</string>
    <string name="balance_fluctuations">Balance fluctuations</string>
    <string name="transaction_amount_params">Transaction amount: +%dVND</string>
    <string name="transaction_amount_params_2">Transaction amount: -%dVND</string>
    <string name="amount_params">Amount %s</string>
    <string name="balance_params">Balance: %sVND</string>
    <string name="list_record">List Record</string>
    <string name="record_sample_1">Record Sample 1</string>
    <string name="logout">Logout</string>
    <string name="update_infor">Update Info</string>
    <string name="your_name_here">Your name here</string>
    <string name="example_email_gmail_dot_com">example_email@gmail.com</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="sign_in_again">Please Login Again!</string>
    <string name="title_range_date">Select Range Date</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="cost">Cost</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="notifications">Notifications</string>
    <string name="notification_sample_1">Notification Sample 1</string>
    <string name="content_sample_1">Content Sample 1</string>
    <string name="overview">Overview</string>
    <string name="today">Today</string>
    <string name="last_7_days">Last 7 Days</string>
    <string name="last_30_days">Last 30 Days</string>
</resources>