<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login_screen">

        <TextView
            android:id="@+id/btnGetStarted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:background="@drawable/bg_text_get_started_login"
            android:fontFamily="@font/font_semi_bold"
            android:paddingHorizontal="@dimen/_6sdp"
            android:paddingVertical="@dimen/_4sdp"
            android:text="@string/get_started"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:fontFamily="@font/font_medium"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="@id/btnGetStarted"
            app:layout_constraintEnd_toStartOf="@id/btnGetStarted"
            app:layout_constraintTop_toTopOf="@id/btnGetStarted" />

        <TextView
            android:id="@+id/textAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:fontFamily="@font/font_extra_bold"
            android:text="@string/save_money"
            android:textColor="@color/white"
            android:textSize="@dimen/_24ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnGetStarted" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:background="@drawable/bg_view_supported_login"
            app:layout_constraintBottom_toTopOf="@id/layoutLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/layoutLogin" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutLogin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_32sdp"
            android:background="@drawable/bg_layout_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textAppName">

            <TextView
                android:id="@+id/textWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/font_semi_bold"
                android:text="@string/welcome_back"
                android:textColor="@color/text_dark_blue"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textEnter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/font_medium"
                android:text="@string/enter_your_details_below"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textWelcome" />

            <EditText
                android:text="lothanhduy@gmail.com"
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:background="@drawable/bg_input"
                android:fontFamily="@font/font_regular"
                android:hint="@string/email_address"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:textColor="@color/text_dark"
                android:textColorHint="@color/un_active"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintTop_toBottomOf="@id/textEnter" />

            <EditText
                android:text="12345678"
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_input"
                android:fontFamily="@font/font_regular"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:textColor="@color/text_dark"
                android:textColorHint="@color/un_active"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintTop_toBottomOf="@id/edtEmail" />

            <TextView
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/bg_btn_login"
                android:fontFamily="@font/font_semi_bold"
                android:gravity="center"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintTop_toBottomOf="@id/edtPassword" />

            <TextView
                android:id="@+id/textLoginWith"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:text="@string/or_login_with"
                android:textColor="@color/un_active"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnLogin" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:background="@color/un_active"
                app:layout_constraintBottom_toBottomOf="@id/textLoginWith"
                app:layout_constraintEnd_toStartOf="@id/textLoginWith"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/textLoginWith" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:background="@color/un_active"
                app:layout_constraintBottom_toBottomOf="@id/textLoginWith"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textLoginWith"
                app:layout_constraintTop_toTopOf="@id/textLoginWith" />

            <View
                android:id="@+id/viewSupported"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textLoginWith" />

            <LinearLayout
                android:id="@+id/btnGoogle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:background="@drawable/bg_input"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                app:layout_constraintEnd_toStartOf="@id/viewSupported"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/viewSupported">

                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:padding="@dimen/_2sdp"
                    android:src="@drawable/ic_login_gg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/google"
                    android:textSize="@dimen/_16ssp"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:fontFamily="@font/font_semi_bold"
                    android:textColor="@color/text_dark" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnFacebook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@drawable/bg_input"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                app:layout_constraintStart_toEndOf="@id/viewSupported"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/viewSupported">

                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:padding="@dimen/_2sdp"
                    android:src="@drawable/ic_login_fb" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook"
                    android:textSize="@dimen/_16ssp"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:fontFamily="@font/font_semi_bold"
                    android:textColor="@color/text_dark" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>