<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:padding="@dimen/_12sdp">

        <ImageView
            android:id="@+id/iconClear"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/icon_clear_cirlce"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textAddCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_semi_bold"
            android:text="@string/add_categories"
            android:textColor="@color/text_dark_blue"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iconClear" />


        <EditText
            android:id="@+id/inputCategoryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/bg_input"
            android:fontFamily="@font/font_regular"
            android:hint="@string/category_name"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/text_dark_blue"
            android:textColorHint="@color/text_gray"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toBottomOf="@id/textAddCategory" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvCategoryParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/inputCategoryName"
            tools:listitem="@layout/item_category_parent" />

        <TextView
            android:id="@+id/buttonSave"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/bg_btn_login"
            android:fontFamily="@font/font_semi_bold"
            android:gravity="center"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rcvCategoryParent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>